<resources>
    <string name="app_name">ReRide</string>
    <string name="device_scan_title">BLE Control</string>
    <string name="updateAngleButton">Update shadow!</string>
    <string name="refreshShadowButton">Refresh!</string>
    <string name="state_description">Desired state</string>
    <string name="bleScanText">Scan for BLE device</string>
    <string name="connectText">Connect to BLE device</string>
    <string name="deviceInfoDescription">Device name</string>
    <string name="connectStateDescription">Whether a GATT connection is established or not</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_device_name">Device name:</string>
    <string name="label_state">State:</string>
    <string name="zero">0</string>
    <string name="label_data">Data:</string>
    <string name="no_data">No data</string>
    <string name="label_device_address">Address:</string>
    <string name="select">Select</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="action_settings">Settings</string>
    <string name="unknown_device">Unknown device</string>
    <string name="get_data_button_text">Get data</string>
    <string name="connecting">Connecting…</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="error">Error!</string>
    <string name="status">Status:</string>
    <string name="aws_title">AWS IoT</string>
    <string name="label_location_lon">Longitude:</string>
    <string name="label_location_lat">Latitude:</string>
    <string name="label_time">Time:</string>
    <string name="connect">Connect</string>
    <string name="devices_number">Devices:</string>
    <string name="label_connected">Connected:</string>
    <string name="streaming_data">Streaming data</string>
    <string name="historical_data">Historical data</string>
    <string name="label_id">ID:</string>
    <string name="data_unit_label">Unit:</string>
    <string name="data_value_label">Value:</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="start_ride">Start ride</string>
    <string name="multi_rider">Multi-rider</string>
    <string name="rider_data">See historical data</string>
    <string name="timezone_hint">Timezone (GMT), e.g. \"3\" or \"-3\"</string>
    <string name="login">Login</string>

    <string name="preference_user_id_default">1234</string>
    <string name="preference_timezone_default">2</string>
    <string name="change_settings">Change settings</string>
    <string name="label_timezone">Timezone:</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="attributes">Attributes</string>
    <string name="sensorLabel">Average sensor values</string>
    <string name="from_time">From:</string>
    <string name="end_time">To:</string>
    <string name="timeRange">Time range from present (minutes)</string>
</resources>
