<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_historical_data"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timeRange"
        android:layout_marginStart="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_time"/>
            <EditText
                android:id="@+id/from_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </LinearLayout>
        <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"/>
            <EditText
                android:id="@+id/end_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_data_button_text"/>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="10dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/label_id"
                  android:textSize="18sp"/>
        <Space android:layout_width="5dp"
               android:layout_height="wrap_content"/>
        <TextView android:id="@+id/id_history_value"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/no_data"
                  android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attributes"
                    android:textStyle="italic"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/label_location_lon"
                          android:textSize="18sp"/>
                <Space android:layout_width="5dp"
                       android:layout_height="wrap_content"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/label_location_lat"
                          android:textSize="18sp"/>
                <Space android:layout_width="5dp"
                       android:layout_height="wrap_content"/>
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/label_time"
                          android:textSize="18sp"/>
                <Space android:layout_width="5dp"
                       android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical"
                          android:layout_width="0dp"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"
                          android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:textStyle="italic"/>
                <TextView android:id="@+id/location_lon_start_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/no_data"
                          android:textSize="18sp"/>
                <Space android:layout_width="5dp"
                       android:layout_height="wrap_content"/>
                <TextView android:id="@+id/location_lat_start_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/no_data"
                          android:textSize="18sp"/>
                <Space android:layout_width="5dp"
                       android:layout_height="wrap_content"/>
                <TextView android:id="@+id/time_start_value"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/no_data"
                          android:textSize="18sp"/>
                <Space android:layout_width="5dp"
                       android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout android:orientation="vertical"
                          android:layout_width="0dp"
                          android:layout_weight="1"
                          android:layout_height="wrap_content"
                          android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end"
                    android:textStyle="italic"/>
                <Space android:layout_width="5dp"
                       android:layout_height="wrap_content"/>
                <TextView android:id="@+id/location_lon_end_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/no_data"
                          android:textSize="18sp"/>
                <Space android:layout_width="5dp"
                       android:layout_height="wrap_content"/>
                <TextView android:id="@+id/location_lat_end_value"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/no_data"
                          android:textSize="18sp"/>
                <Space android:layout_width="5dp"
                       android:layout_height="wrap_content"/>
                <TextView android:id="@+id/time_end_value"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/no_data"
                          android:textSize="18sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--Line-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensorLabel"
        android:layout_margin="10dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/historical_data_recycler_view"
        android:scrollbars="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>


</LinearLayout>