<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">


            <Button
                android:id="@+id/button_start_ride"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_ride"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/button_multi_rider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multi_rider"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/button_rider_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rider_data"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/button_change_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_settings"
                android:layout_gravity="center"/>


        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>