<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_ble"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/devices_number"
                      android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                   android:layout_height="wrap_content"/>
            <TextView android:id="@+id/devices_number"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/zero"
                      android:textSize="18sp"/>
            <Space android:layout_width="10dp"
                   android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/label_connected"
                      android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                   android:layout_height="wrap_content"/>
            <TextView android:id="@+id/connection_state"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/zero"
                      android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/label_location_long"
                      android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                   android:layout_height="wrap_content"/>
            <TextView android:id="@+id/location_long_value"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/no_data"
                      android:textSize="18sp"/>
            <Space android:layout_width="10dp"
                   android:layout_height="wrap_content"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/label_location_lat"
                      android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                   android:layout_height="wrap_content"/>
            <TextView android:id="@+id/location_lat_value"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/no_data"
                      android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/label_time"
                      android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                   android:layout_height="wrap_content"/>
            <TextView android:id="@+id/time_value"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/no_data"
                      android:textSize="18sp"/>
        </LinearLayout>
        <!--Line-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <!--Could present current data-->

        <!--Line-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <!--Could present history data-->
    </LinearLayout>

</LinearLayout>