<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_ble_data"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/label_id"
                      android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                   android:layout_height="wrap_content"/>
            <TextView android:id="@+id/id__value"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/no_data"
                      android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/label_location_long"
                      android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                   android:layout_height="wrap_content"/>
            <TextView android:id="@+id/location_lon_value"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/no_data"
                      android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/label_location_lat"
                      android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                   android:layout_height="wrap_content"/>
            <TextView android:id="@+id/location_lat_value"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/no_data"
                      android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/label_time"
                      android:textSize="18sp"/>
            <Space android:layout_width="5dp"
                   android:layout_height="wrap_content"/>
            <TextView android:id="@+id/time_value"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/no_data"
                      android:textSize="18sp"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/data_recycler_view"
        android:scrollbars="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>